@@ -3,7 +3,6 @@ package lims.api.test.service.impl;
 import lims.api.test.dto.request.ReceiptInfoDto;
 import lims.api.test.dto.response.ReceiptDto;
 import lims.api.test.entity.Receipt;
-import lims.api.test.entity.TestItem;
 import lims.api.test.repository.ReceiptRepository;
 import lims.api.test.repository.TestItemRepository;
 import lims.api.test.service.ReceiptService;
@@ -11,9 +10,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static lims.api.common.util.ValidationUtil.isNew;
 
 @Service
 @RequiredArgsConstructor
@@ -23,7 +19,7 @@ public class ReceiptServiceImpl implements ReceiptService {
 
     @Override
     public List<ReceiptDto> findAll() {
-        List<ReceiptDto> receiptList = receiptRepository.findAll().stream().map(Receipt::of).collect(Collectors.toList());
+        List<ReceiptDto> receiptList = receiptRepository.findAll().stream().map(ReceiptDto::of).toList();
         receiptList.forEach(receipt -> {
             receipt.setTestItems(testItemRepository.findItems(receipt.getId()));
         });
@@ -33,20 +29,20 @@ public class ReceiptServiceImpl implements ReceiptService {
     @Override
     public void receipt(ReceiptInfoDto receiptInfoDto) {
         Receipt receipt = receiptInfoDto.toEntity(receiptInfoDto);
-        if(isNew(receipt.getId())) {
-            save(receipt);
+        if(receipt.isNew()) {
+            create(receipt);
         } else {
             update(receipt);
         }
     }
 
-    private void save(Receipt receipt) {
-        receiptRepository.save(receipt);
+    private void create(Receipt receipt) {
+        receiptRepository.insert(receipt);
         Long receiptId = receipt.getId();
 
         receipt.getTestItems().forEach(item -> {
             item.setReceiptId(receiptId);
-            testItemRepository.save(item);
+            testItemRepository.insert(item);
         });
     }
 
@@ -54,8 +50,8 @@ public class ReceiptServiceImpl implements ReceiptService {
         receiptRepository.update(receipt);
 
         receipt.getTestItems().forEach(item -> {
-            testItemRepository.delete(item.getId());
-            testItemRepository.save(item);
+            testItemRepository.deleteById(item.getId());
+            testItemRepository.insert(item);
         });
     }
 
